tests/config_all/config_all.exp
Error ------------------------------------------------------- no_at_flow.js:1:17

Cannot assign `"not a number"` to `x` because string is incompatible with
number.

Error: no_at_flow.js:1
  1: var x: number = "not a number"; // Error: string ~> number
                     ^^^^^^^^^^^^^^ Cannot assign `"not a number"` to `x` because string [1] is incompatible with number [2].
  References:
    1: var x: number = "not a number"; // Error: string ~> number
                       ^^^^^^^^^^^^^^ [1]: string
    1: var x: number = "not a number"; // Error: string ~> number
              ^^^^^^ [2]: number


Found 1 error
